# VulkanPbr

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  buildandrun.bat  buildandrundbg.bat
assets/models/backpack/: backpack.mtl
assets/shaders/: normalMapInvTBN.frag  normalMapInvTBN.vert  normalMapTBN.frag  normalMapTBN.vert  phongLighting.frag  phongLighting.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
lib/: CMakeLists.txt
scripts/: build-clang.bat  build-msvc-dbg.bat  build-msvc-rel.bat  cmake-system-info.bat  compileShaders.bat  config-clang-dbg.sh  config-msvc-dbg.bat  config-msvc-rel.bat  config-msvc.bat  run-clang-dbg.sh  run-clang.bat  run-msvc-dbg.bat  run-msvc-rel.bat
src/: CMakeLists.txt  main.cpp
src/core/: core.cpp  core.h  input.cpp  logger.cpp  window.cpp  window.h
src/engine/: camera.cpp  camera.h  device.cpp  device.h  engine.cpp  engine.h  initializers.cpp  initializers.h  model.cpp  model.h  shader.cpp  shader.h  types.cpp  types.h  vulkanContext.cpp  vulkanContext.h
src/ui/: imGuiOverlay.cpp  imGuiOverlay.h
src/utils/: utils.cpp  utils.h
